fix to showow not showing

--- a/cookiemunch.scss
+++ b/cookiemunch.scss
@@ -15,7 +15,7 @@ $mix-btn-bg-with-percent: 95%;
 // override theme:
 // $main-body-bg: #fff;
 // $main-body-text: #fff;
-$main-body-border-shadow: 0 0px 0px 1px rgba(255, 255, 255, 0.1);
+$main-body-border-shadow: 0 10px 30px 0px rgba(0, 0, 0, 0.4);
 $btn-border: 0px solid #fff;
 $btn-text: #fff;
 $btn-bg-decline: rgb(197, 49, 49);
