--- a/cookiemunch_flat_light.scss
+++ b/cookiemunch_flat_light.scss
@@ -1,7 +1,7 @@
 // body-bg and body-text mix:
 $main-body-bg: #fff;
 $main-body-text: rgb(67, 67, 67);
-$main-body-border-shadow: 0 0px 0px 1px rgba(255, 255, 255, 0.1);
+$main-body-border-shadow: 0 10px 30px 0px rgba(0, 0, 0, 0.4);
 $btn-border: 1px solid mix($main-body-bg, $main-body-text, 85%);
 $btn-text: $main-body-text;
 $btn-bg-decline: mix($main-body-bg, $main-body-text, 95%);
